--- a/package.json
+++ b/package.json
@@ -26,6 +26,11 @@
     "babel-loader": "^6.3.2",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
+    "eslint": "^4.8.0",
+    "eslint-config-airbnb": "^15.1.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^5.1.1",
+    "eslint-plugin-react": "^7.4.0",
     "redux-devtools": "^3.4.0",
     "webpack": "^2.2.1"
   },
@@ -35,12 +40,14 @@
     "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
     "express": "^4.15.0",
     "jquery": "^3.1.1",
+    "mysql": "^2.13.0",
     "package.json": "^2.0.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "request": "^2.81.0",
-    "semantic-ui-react": "^0.74.2"
+    "semantic-ui-react": "^0.74.2",
+    "victory": "^0.23.0"
   }
 }
