--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "./server/index.js",
   "scripts": {
     "react-dev": "webpack -d --watch",
-    "server-dev": "nodemon server/index.js"
+    "server-dev": "nodemon server/index.js",
+    "postinstall": "webpack -p"
   },
   "repository": {
     "type": "git",
