--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "./server/index.js",
   "scripts": {
     "react-dev": "webpack -d --watch",
-    "server-dev": "nodemon server/index.js",
-    "heroku-postbuild": "webpack -p --config ./webpack.prod.config.js --progress"
+    "server-dev": "nodemon server/index.js"
   },
   "repository": {
     "type": "git",
