--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-react": "^7.4.0",
-    "redux-devtools": "^3.4.0",
-    "webpack": "^2.2.1"
+    "redux-devtools": "^3.4.0"
   },
   "dependencies": {
     "axios": "^0.16.2",
@@ -46,6 +45,7 @@
     "redux": "^3.7.2",
     "request": "^2.81.0",
     "semantic-ui-react": "^0.74.2",
-    "victory": "^0.23.0"
+    "victory": "^0.23.0",
+    "webpack": "^2.2.1"
   }
 }
