--- a/package.json
+++ b/package.json
@@ -22,10 +22,7 @@
   },
   "homepage": "https://github.com/TradeLeague/TradeLeague#readme",
   "devDependencies": {
-    "babel-core": "^6.23.1",
-    "babel-loader": "^6.3.2",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-preset-react": "^6.23.0",
+  
     "eslint": "^4.8.0",
     "eslint-config-airbnb": "^15.1.0",
     "eslint-plugin-import": "^2.7.0",
@@ -47,6 +44,10 @@
     "request": "^2.81.0",
     "semantic-ui-react": "^0.74.2",
     "victory": "^0.23.0",
-    "webpack": "^2.2.1"
+    "webpack": "^2.2.1",
+    "babel-core": "^6.23.1",
+    "babel-loader": "^6.3.2",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.23.0",
   }
 }
