--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ coverage
 build/
 dist/
 client/dist/bundle.js
+helper/config
 
 # Dependency directorys
 # Deployed apps should consider commenting these lines out:
