--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "express": "^4.15.0",
     "mysql": "^2.13.0",
     "package.json": "^2.0.1",
+    "passport": "^0.4.0",
+    "passport-facebook": "^2.1.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.6",
@@ -48,6 +50,10 @@
     "request": "^2.81.0",
     "semantic-ui-react": "^0.74.2",
     "victory": "^0.23.0",
-    "webpack": "^2.2.1"
+    "webpack": "^2.2.1",
+    "connect-ensure-login": "^0.1.1",
+    "cookie-parser": "^1.3.5",
+    "express-session": "^1.11.3",
+    "morgan": "^1.6.1"
   }
 }
