--- a/package.json
+++ b/package.json
@@ -37,11 +37,16 @@
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
     "body-parser": "^1.17.0",
+    "connect-ensure-login": "^0.1.1",
+    "cookie-parser": "^1.3.5",
     "express": "^4.15.0",
+    "express-session": "^1.11.3",
+    "morgan": "^1.6.1",
     "mysql": "^2.13.0",
     "package.json": "^2.0.1",
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
+    "passport-google-oauth20": "^1.0.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.6",
@@ -50,10 +55,6 @@
     "request": "^2.81.0",
     "semantic-ui-react": "^0.74.2",
     "victory": "^0.23.0",
-    "webpack": "^2.2.1",
-    "connect-ensure-login": "^0.1.1",
-    "cookie-parser": "^1.3.5",
-    "express-session": "^1.11.3",
-    "morgan": "^1.6.1"
+    "webpack": "^2.2.1"
   }
 }
